# backtrack

./: .gitignore  CMakeLists.txt  README.md  app_manifest.rc  main.cpp
BackupModule/: backupcontroller.cpp  backupcontroller.h  backupservice.cpp  backupservice.h  fileoperations.cpp  fileoperations.h  stagingmodel.cpp  stagingmodel.h  transferworker.cpp  transferworker.h
UIComponents/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Utils/: constants.h  filewatcher.cpp  filewatcher.h  utils.cpp  utils.h
app/: app_manifest.rc  main.cpp
backup_module/constants/: backupconstants.h
backup_module/controller/: backupcontroller.cpp  backupcontroller.h
backup_module/models/: destinationproxymodel.cpp  destinationproxymodel.h  stagingmodel.cpp  stagingmodel.h
backup_module/service/: backupservice.cpp  backupservice.h  fileoperations.cpp  fileoperations.h  stagingutils.cpp  stagingutils.h
backup_module/worker/: transferworker.cpp  transferworker.h
config/: _constants.h  app_settings.h  backup_settings.h  cfgmgr_settings.h  labels_settings.h  messages_settings.h  progress_settings.h  resources_settings.h  utilities_settings.h  visual_settings.h
config/ConfigManagers/BackupConfigManager/: BackupConfigConstants.h  BackupConfigManager.cpp  BackupConfigManager.h
config/ConfigManagers/InstallConfigManager/: InstallConfigConstants.h  InstallConfigManager.cpp  InstallConfigManager.h
config/ConfigManagers/NotificationConfigManager/: NotificationConfigConstants.h  NotificationConfigManager.cpp  NotificationConfigManager.h  NotificationConfigStruct.h
config/ConfigManagers/ThemeConfigManager/: ThemeConfigConstants.h  ThemeConfigManager.cpp  ThemeConfigManager.h
config/ConfigManagers/UserConfigManager/: UserConfigConstants.h  UserConfigManager.cpp  UserConfigManager.h
config/backupsettingsmanager/: backupsettingsmanager.cpp  backupsettingsmanager.h
config/configdirector/: ConfigDirectorConstants.h  configdirector.cpp  configdirector.h
config/configmanager/: configmanager.cpp  configmanager.h
config/configmanagers/backupsettingsmanager/: backupsettingsmanager.cpp  backupsettingsmanager.h
config/configmanagers/installmetadatamanager/: installmetadatamanager.cpp  installmetadatamanager.h
config/configmanagers/notificationsmanager/: notificationsmanager.cpp  notificationsmanager.h  notificationstruct.h
config/configmanagers/thememanager/: thememanager.cpp  thememanager.h
config/configmanagers/usersettingsmanager/: usersettingsmanager.cpp  usersettingsmanager.h
config/configsettings/: _settings.h  app_settings.h  backup_settings.h  cfgmgr_settings.h  dialog_settings.h  labels_settings.h  messages_settings.h  notifications_settings.h  progress_settings.h  resources_settings.h  timing_settings.h  utilities_settings.h  visual_settings.h
config/installmetadatamanager/: installmetadatamanager.cpp  installmetadatamanager.h
config/thememanager/: thememanager.cpp  thememanager.h  themeutils.cpp  themeutils.h
config/usersettingsmanager/: usersettingsmanager.cpp  usersettingsmanager.h
constants/: app_info.h  backup_config.h  interface_config.h  kvp_info.h  system_constants.h  units_config.h  window_config.h
core/backup/controller/: backupcontroller.cpp  backupcontroller.h
core/backup/models/: destinationproxymodel.h  stagingmodel.cpp  stagingmodel.h
core/backup/service/: backupservice.cpp  backupservice.h  fileoperations.cpp  fileoperations.h  stagingutils.cpp
core/backup/worker/: transferworker.cpp  transferworker.h
core/backup_module/controller/: backupcontroller.cpp  backupcontroller.h
core/backup_module/models/: destinationproxymodel.cpp  destinationproxymodel.h  stagingmodel.cpp  stagingmodel.h
core/backup_module/operations/: fileoperations.cpp  fileoperations.h
core/config/: _constants.h  app_config.h  app_settings.h  backup_info.h  backup_settings.h  constants.h  error_messages.h  messages_settings.h  progress_config.h  progress_settings.h  resources_settings.h  user_settings.h  utilities_settings.h  visual_config.h  visual_settings.h
core/shared/: fileoperations.cpp  fileoperations.h  filewatcher.cpp  filewatcher.h  formatutils.cpp  formatutils.h  jsonmanager.cpp  stagingutils.cpp  stagingutils.h  uiutils.cpp  uiutils.h
resources/: icons_resource.qrc  resource.qrc  themes_resource.qrc
resources/styles/: dark.qss  light.qss
resources/themes/: base.qss  dark.qss  light.qss
services/ServiceDirector/: ServiceDirector.cpp  ServiceDirector.h  ServiceDirectorConstants.h
src/: main.cpp
src/app/: app_manifest.rc  main.cpp
src/core/utils/: utils.h  (+4 more)
ui/: systemtraycontextmenu.h
ui/aboutdialog/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  aboutdialogconstants.h  aboutdialogstyling.h
ui/customtitlebar/: customtitlebar.cpp  customtitlebar.h  customtitlebarmode.h  customtitlebarstyling.h  titlebarmode.h  titlebarstyles.h
ui/helpdialog/: helpdialog.cpp  helpdialog.h  helpdialog.ui  helpdialogconstants.h  helpdialogstyling.h
ui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowconstants.h  mainwindowlabels.h  mainwindowmessages.h  mainwindowstyling.h
ui/notificationsdialog/: notificationsdialog.cpp  notificationsdialog.h  notificationsdialog.ui  notificationsdialogconstants.h  notificationsdialogstyling.h
ui/promptdialog/: promptdialog.cpp  promptdialog.h  promptdialog.ui  promptdialogconstants.h  promptdialogstyling.h
ui/scheduledialog/: scheduledialog.cpp  scheduledialog.h  scheduledialog.ui  scheduledialogconstants.h  scheduledialogstyling.h
ui/settingsdialog/: settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  settingsdialogconstants.h  settingsdialogstyling.h
ui/snaplistdialog/: snaplistdialog.cpp  snaplistdialog.h  snaplistdialog.ui  snaplistdialogconstants.h
ui/templatedialog/: templatedialog.cpp  templatedialog.h  templatedialogconstants.h  templatedialogstyling.h
ui/toolbarmanager/: toolbarmanager.cpp  toolbarmanager.h  toolbarmanagerconstants.h  toolbarmanagerstyling.h
ui/welcomedialog/: welcomedialog.cpp  welcomedialog.h  welcomedialog.ui  welcomedialogconstants.h  welcomedialogstyling.h
(+86 files in other folders)
